--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "django-storages (>=1.14.5,<2.0.0)",
     "boto3 (>=1.37.4,<2.0.0)",
     "django-ninja (>=1.3.0,<2.0.0)",
-    "pillow (>=11.1.0,<12.0.0)"
+    "pillow (>=11.1.0,<12.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)"
 ]
 
 
