--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "boto3 (>=1.37.4,<2.0.0)",
     "django-ninja (>=1.3.0,<2.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
-    "pyjwt (>=2.10.1,<3.0.0)"
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "celery (>=5.4.0,<6.0.0)",
+    "redis (>=5.2.1,<6.0.0)"
 ]
 
 
