--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "pillow (>=11.1.0,<12.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "celery (>=5.4.0,<6.0.0)",
-    "redis (>=5.2.1,<6.0.0)"
+    "redis (>=5.2.1,<6.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 
