--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ requests==2.32.3
 s3transfer==0.11.3
 six==1.17.0
 sqlparse==0.5.3
+stripe==11.6.0
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
