--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "redis (>=5.2.1,<6.0.0)",
     "requests (>=2.32.3,<3.0.0)",
     "stripe (>=11.6.0,<12.0.0)",
+    "cryptography (>=44.0.2,<45.0.0)",
 ]
 
 
