--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,13 @@ boto3==1.37.4
 botocore==1.37.4
 celery==5.4.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cryptography==44.0.2
 Django==5.1.6
 django-cors-headers==4.7.0
 django-countries==7.6.1
@@ -26,6 +28,7 @@ packaging==24.2
 pillow==11.1.0
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 PyJWT==2.10.1
